# monty-hall

./: MontyHall.lhs  README.md  monty-hall.cabal
